<resources>
    <string name="app_name">KNXManager</string>
    <string name="text_connect_server">Stan połączenia</string>
    <string name="text_connect_state">Adres: </string>
    <string name="button_connect_server">Połącz z serwerem</string>
    <string name="button_processes_view">Procesy</string>
    <string name="button_data_view">Dane</string>
    <!--Add server view -->
    <string name="label_connect_server">Dodaj serwer</string>
    <string name="label_server_ip">Podaj adres IP serwera</string>
    <string name="tb_server_ip_hint">Serwer ip address</string>
    <string name="label_server_port">Podaj port serwera</string>
    <string name="tb_server_port_hint">Serwer port</string>

    <string name="btn_test_connection">Testuj</string>
    <string name="btn_connect">Połącz</string>


    <!--Processes view -->
    <string name="pv_label_info_1_ProcessType">Typ Procesu: </string>
    <string name="pv_label_info_2_ProcessIp">Ip dla procesu: </string>
    <string name="pv_label_info_3_FileName">Przetwarzany Plik: </string>
    <string name="pv_label_info_4_Numbers">Przetworzono/Wszystkie: </string>
    <string name="pv_btn_label">Odświerz</string>


    <!--Data view -->
    <string name="DG_1">TID</string>
    <string name="DG_2">Timestamp</string>
    <string name="DG_3">RawData</string>
    <string name="DG_4">Service</string>
    <string name="DG_5">FrameFormat</string>
    <string name="DG_6">FileName</string>
    <string name="dv_btn_label">Odświerz</string>

</resources>