<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".DataViewer"
    android:stretchColumns="1,2,3,4,5,6"
    android:layout_margin="8dp"
    >

    <ProgressBar
        android:id="@+id/dataProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TableRow android:isScrollContainer="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/DG_1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_column="1"
            android:text="@string/DG_2"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_column="1"
            android:text="@string/DG_3"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_column="1"
            android:text="@string/DG_4"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_column="1"
            android:text="@string/DG_5"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_column="1"
            android:text="@string/DG_6"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="16sp"
            android:textStyle="bold" />
    </TableRow>
    <HorizontalScrollView
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dgRecyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
    </HorizontalScrollView >
</TableLayout>