<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="178dp"
        tools:layout_editor_absoluteY="125dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_connect_server"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_server_ip" />

        <EditText
            android:id="@+id/editTextTextServerIp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/tb_server_ip_hint"
            android:ems="10"
            android:inputType="numberSigned|number|text|numberDecimal|phone" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_server_port" />

        <EditText
            android:id="@+id/editTextTextServerPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/tb_server_port_hint"
            android:ems="10"
            android:inputType="numberSigned|number|text|numberDecimal|phone" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="testServerConnection"
            android:text="@string/btn_test_connection" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/textView3Response"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:id="@+id/connectionProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saveAndExit"
            android:text="@string/btn_connect" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>